 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06-26 ------------------------------------------------------------------------------------------------------------
1 modded autoSave slightly so it now releases immediately no matter what (by wrapping _process in setTimeout())
1 DelDoc is now fully working as an autoSave() op
1 cleaned up a few things about packets, mostly document work
1 added Fault() handler so any packets sent FtoB will now open an error dialog even if not waited for

2025-06-25 ------------------------------------------------------------------------------------------------------------
1 "AddDoc" and "ModDoc:name" are now fully working
1 "AddDb" now fully working under the new pktBtoF standard too

2025-06-23 ------------------------------------------------------------------------------------------------------------
1 fixed new bug caused by changing autoSave(kwd,payload), where payload was in this case a {}, causing the compare to 
    fail, so JSON.stringify(payload) now so compare works properly
1 autoSave("kwd:subkey", payload) now working
1 there were a few places where WS.pktFtoB() were being called correctly, being eliminated in favor of autoSave()
    which already handles flushAll() and delay
1 discovered a possible 'gotcha' wherein when loading/insertingTo dcwFlatTrees, we load the dcw and delay-load the dch
    but in so doing the dch doesn't know what it is until delayLoaded, if it's a BOX and something else wants to attach