@@ -38,8 +38,6 @@ async function start() {
 
     await BF.loadModule("../client/html/modules/shared/shared_PacketDefs.js");   // load the known SHARED baseline packet definitions
     await BF.loadModule("./modules/core/bem_core_PacketHandlers.js");            // load the serverside handlers for incoming packets
-    // await BF.loadModule("./modules/core/bem_core_DocExporter.js");            // export doc into latest streamformat
-    // await BF.loadModule("./modules/core/bem_core_DocExploder.js");            // validate, upgrade, explode, rebuild doc based on version
 
     const app = express();
     app.use(express.static(path.join(BG.basePath, 'client/html')));
