@@ -4,7 +4,9 @@
  2025-06- ------------------------------------------------------------------------------------------------------------
  2025-06- ------------------------------------------------------------------------------------------------------------
  2025-06- ------------------------------------------------------------------------------------------------------------
- 2025-06- ------------------------------------------------------------------------------------------------------------
+ 2025-06-27 ------------------------------------------------------------------------------------------------------------
+1 Finally have most conversions to the new backend/frontend handling finished, final step of export/import documents
+    is all that really remains now.
  2025-06-26 ------------------------------------------------------------------------------------------------------------
 1 modded autoSave slightly so it now releases immediately no matter what (by wrapping _process in setTimeout())
 1 DelDoc is now fully working as an autoSave() op
